Added SPIRV-Tools to perform optimizations.
This provides much more advanced optimizations than the remap step.
Optimization now has two levels: dead-code elimination only or full
optimizations.

Added update-submodules.sh script to handle submodules. This ensures that
the SPIRV-Headers submodule for SPIRV-Tools is properly set up.

Installs for static libraries should now include the proper
find_dependency() calls for both boost and SPIRV-Tools.

Updated CI build steps to build all relevant configurations, including
debug, release, static, shared, and 32-bit and 64-bit for Windows.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "SPIRV-Cross"]
 	path = Compile/SPIRV-Cross
 	url = https://github.com/KhronosGroup/SPIRV-Cross
+[submodule "Compile/SPIRV-Tools"]
+	path = Compile/SPIRV-Tools
+	url = https://github.com/akb825/SPIRV-Tools.git
