Allow test jobs to continue on error.
This wasn't set earlier so that tests failures without output wouldn't
get lost. However, the build gets marked as finished with issues rather
than success, so this is better for reporting unit tests failures that
do have output.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,7 @@ jobs:
             workingDirectory: $(Build.BinariesDirectory)/Debug
             cmakeArgs: --build . --target test
         displayName: Run tests debug
+        continueOnError: true
         timeoutInMinutes: 5
       - task: PublishTestResults@2
         inputs:
@@ -82,6 +83,7 @@ jobs:
             workingDirectory: $(Build.BinariesDirectory)/Release
             cmakeArgs: --build . --target test
         displayName: Run tests release
+        continueOnError: true
         timeoutInMinutes: 5
       - task: PublishTestResults@2
         inputs:
@@ -139,6 +141,7 @@ jobs:
             workingDirectory: $(Build.BinariesDirectory)/Debug
             cmakeArgs: --build . --target test
         displayName: Run tests debug
+        continueOnError: true
         timeoutInMinutes: 5
       - task: PublishTestResults@2
         inputs:
@@ -168,6 +171,7 @@ jobs:
             workingDirectory: $(Build.BinariesDirectory)/Release
             cmakeArgs: --build . --target test
         displayName: Run tests release
+        continueOnError: true
         timeoutInMinutes: 5
       - task: PublishTestResults@2
         inputs:
@@ -238,6 +242,7 @@ jobs:
             workingDirectory: $(Build.BinariesDirectory)
             cmakeArgs: --build . --config Debug --target run_tests
         displayName: Run tests debug
+        continueOnError: true
         timeoutInMinutes: 5
         env:
             PATH: $(PATH);$(BOOST_ROOT)\lib
@@ -264,6 +269,7 @@ jobs:
             workingDirectory: $(Build.BinariesDirectory)
             cmakeArgs: --build . --config Release --target run_tests
         displayName: Run tests release
+        continueOnError: true
         timeoutInMinutes: 5
         env:
             PATH: $(PATH);$(BOOST_ROOT)\lib
