Ensure apt index is up to date in CI.
This can cause build failures due to the index being out of date and
referencing packages that no longer exist.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,7 @@ jobs:
       - script: |
             ./update-submodules.sh
             # Need system boost for static libs.
+            sudo apt-get update
             sudo apt-get -y install libboost-all-dev
         displayName: Download submodules
         workingDirectory: $(Build.SourcesDirectory)
