Updated glslang, SPIRV-Cross, and SPIRV-Tools.
Fixed usage of dynamic libraries for Boost on Windows that spontaneously
broke. (likely due to a CMake change)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,10 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 if (MSL_SHARED)
 	set(MSL_LIB SHARED)
+	set(Boost_USE_STATIC_LIBS OFF)
 else()
 	set(MSL_LIB STATIC)
+	set(Boost_USE_STATIC_LIBS ON)
 endif()
 
 if (MSL_OUTPUT_DIR)
@@ -58,7 +60,7 @@ endif()
 
 set(MSL_MAJOR_VERSION 1)
 set(MSL_MINOR_VERSION 4)
-set(MSL_PATCH_VERSION 3)
+set(MSL_PATCH_VERSION 4)
 set(MSL_VERSION ${MSL_MAJOR_VERSION}.${MSL_MINOR_VERSION}.${MSL_PATCH_VERSION})
 
 set(MSL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
