Disabled warnings for flatbuffers.
flatc now warns for not using snake_case. Since no other code in this
codebase uses snake_case, this isn't useful for me.

--- a/Shared/CMakeLists.txt
+++ b/Shared/CMakeLists.txt
@@ -3,7 +3,7 @@ find_program(FLATC flatc)
 if (FLATC)
 	add_custom_command(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/mslb_generated.h
 		MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/mslb.fbs
-		COMMAND ${FLATC} ARGS -c --scoped-enums --no-includes --gen-mutable mslb.fbs
+		COMMAND ${FLATC} ARGS -c --scoped-enums --no-includes --gen-mutable --no-warnings mslb.fbs
 		DEPENDS ${FLATC}
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 	add_custom_target(mslb DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/mslb_generated.h)
