Updated CI images.
macOS 10.14 and VS2017 images are deprecated.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,7 +101,7 @@ jobs:
         displayName: Publish test results release
   - job: Mac
     pool:
-        vmImage: macOS-10.14
+        vmImage: macOS-1015
     workspace:
         clean: all
     strategy:
@@ -189,7 +189,7 @@ jobs:
         displayName: Publish test results release
   - job: Windows
     pool:
-        vmImage: vs2017-win2016
+        vmImage: windows-2019
     workspace:
         clean: all
     strategy:
