Fixed CMAKE_OSX_DEPLOYMENT_TARGET not being set.
Unless you use FORCE in CMakeLists.txt, it doesn't take effect.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ set(MSL_ROOT_FOLDER MSL CACHE STRING
 	"Root folder for the MSL projects. Usefull when embedding in other projects.")
 set(MSL_INSTALL ON CACHE BOOL "Allow installation for MSL components.")
 
-set(CMAKE_OSX_DEPLOYMENT_TARGET 10.11 CACHE STRING "Minimum macOS deployment version.")
+if (NOT CMAKE_OSX_DEPLOYMENT_TARGET)
+	set(CMAKE_OSX_DEPLOYMENT_TARGET 10.11 CACHE STRING "Minimum macOS deployment version." FORCE)
+endif()
 
 if (MSL_BUILD_TESTS)
 	find_package(GTest QUIET)
