--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -189,7 +189,7 @@ jobs:
         displayName: Publish test results release
   - job: Windows
     pool:
-        vmImage: windows-latest
+        vmImage: windows-2019
     workspace:
         clean: all
     strategy:
